--- a/index.css
+++ b/index.css
@@ -1,20 +1,22 @@
+@font-face {font-family: 'APL386n';src: url('APL386.otf');}
 @font-face {font-family: 'APL386';src: url('APL386.ttf');}
 @font-face {font-family: 'APL385';src: url('APL385.ttf');}
 input,label{
   position: fixed;
-  background: rgba(255,255,255,0.7)
+  background: rgba(255,255,255,0.7);
+  font-size: 18;
 }
 * {
   font-weight: unset;
 }
-#APL386{top:2ex;}label[for="APL386"]{top:1ex;}#APL386:checked~*:not(label){font-family: 'APL386'!important;}
-#APL385{top:5ex;}label[for="APL385"]{top:3ex;}#APL385:checked~*:not(label){font-family: 'APL385'!important;}
+#APL386n{top:1ex;}label[for="APL386n"]{top:1ex;}#APL386n:checked~*:not(.x){font-family: 'APL386n'!important;}
+#APL386{top:3ex;}label[for="APL386"]{top:3ex;}#APL386:checked~*:not(.x){font-family: 'APL386'!important;}
+#APL385{top:5ex;}label[for="APL385"]{top:5ex;}#APL385:checked~*:not(.x){font-family: 'APL385'!important;}
 label{
   left:2em;
-  background: rgba(255,255,255,0.7);
 }
 h1{
-  padding-top:1ex; 
+  padding-top:3ex; 
 }
 h1>span {
   float: right;
